--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,14 @@ obj/*
 Properties/*
 code/obj/*
 code/Properties/*
+*.sln
+
+# Editor Projects
+code/Editor/obj/*
+code/Editor/Properties/*
+code/Editor/*.sln
+code/Editor/.vs/*
+code/Editor/.vscode/*
 
 # Auto-generated asset related files
 *.generated.*
